@@ -1,3 +1,8 @@
+2009-06-21: 14:00 Ali aliov@xfce.org
+	* Make the generic common pointers static in the *_new functions.
+	* src/xfpm-xfconf.c free specs list after usage.
+	* settings/xfpm-settings.c Fix default DPMS settings on battery power.
+
 2009-06-20: 19:50 Ali aliov@xfce.org
 	* libxfpm/xfpm-common.c Remove no longer used function, that's it
 	for Today :).
